@@ -12,6 +12,11 @@
  * RCS: @(#) $Id$
  */
 
+#include "tcl.h"
+#ifndef NULL
+#define NULL 0
+#endif
+
 /*
  *----------------------------------------------------------------------
  *
